--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header class="topbar">
     <div class="brand">WEATHERNOW</div>
     <div class="location-control">
-      <span class="label">Pesquisar clima em</span>
+      <span class="label">Buscar clima em</span>
       <input type="text" id="cityInput" placeholder="Digite a cidade" aria-label="Digite a cidade" />
       <button id="searchButton" class="btn">Buscar</button>
     </div>
